<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F3F3"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/reset"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/heightType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UselessParent">

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/height_ft_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/height_ft"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:hint="@string/height_ft"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:padding="14dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="LabelFor" />

                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/height_in_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    app:neomorph_elevation="6dp"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/height_in"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@null"
                        android:gravity="center"
                        android:hint="@string/height_in"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="LabelFor" />


                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/height_cm_layout"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:visibility="gone"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/height_cm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@null"
                        android:gravity="center"
                        android:hint="@string/height_cm"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </soup.neumorphism.NeumorphCardView>


            </LinearLayout>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/neumorphCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/heightType"
                app:neumorph_shapeType="flat">

                <Spinner
                    android:id="@+id/spinnerFit"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/category" />


            </soup.neumorphism.NeumorphCardView>


            <LinearLayout
                android:id="@+id/weightType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightType"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/neumorphCardView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@null"
                        android:gravity="center"
                        android:hint="@string/weight_kg"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/weight_kg"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:hint="@string/weight_lbs"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:importantForAutofill="no" />

                </soup.neumorphism.NeumorphCardView>

            </LinearLayout>



            <soup.neumorphism.NeumorphCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightType"
                app:neumorph_shapeType="flat">


                <Spinner
                    android:id="@+id/spinnerKg"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/WeightCategory" />


            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphButton
                android:id="@+id/bmi_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/let_s_begin"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weightType"
                app:neumorph_shapeType="flat" />


            <soup.neumorphism.NeumorphCardView
                android:layout_marginTop="40dp"
                app:neumorph_shapeType="flat"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@+id/bmi_button" >



                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/bmi"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/_00_00"
                            android:textSize="40sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/bmi"
                            android:textSize="40sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>


                    <TextView
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="Underweight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>




                </LinearLayout>

            </soup.neumorphism.NeumorphCardView>








        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>